@@ -1,3 +1,9 @@
+2012-10-10  Albert Chu <chu11@llnl.gov>
+
+	* libipmiconsole/: IPMICONSOLE_DEBUG_FILE now dumps to current
+	working directory instead of /var/log.  This is a debug feature
+	and not a logging feature.
+	
 2012-10-09  Dave Walker <DaveWalker@ubuntu.com>,
 
 	* common/toolcommon/tool-daemon-common.c (daemonize_common): Check
